<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/asLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaSeniorFragment">

    <EditText
        android:id="@+id/etNomeAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascimentoAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintStart_toStartOf="@+id/etNomeAS"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAS" />

    <EditText
        android:id="@+id/etBairroAS"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoAS"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoAS" />

    <CheckBox
        android:id="@+id/cbProblemasCardiacos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/problemas_cardiacos"
        app:layout_constraintStart_toStartOf="@+id/etBairroAS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAS" />

    <Button
        android:id="@+id/btnCadastrarAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbProblemasCardiacos" />

</androidx.constraintlayout.widget.ConstraintLayout>