<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ajLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJuvenilFragment">

    <EditText
        android:id="@+id/etNomeAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascimentoAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascimentoAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/nascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintBottom_toTopOf="@+id/etBairroAJ"
        app:layout_constraintStart_toStartOf="@+id/etNomeAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAJ" />

    <EditText
        android:id="@+id/etBairroAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintBottom_toTopOf="@+id/etAnos"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoAJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoAJ" />

    <EditText
        android:id="@+id/etAnos"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/anos_praticados"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/cinza_hint"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarAJ"
        app:layout_constraintStart_toStartOf="@+id/etBairroAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAJ" />

    <Button
        android:id="@+id/btnCadastrarAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="273dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnos" />

</androidx.constraintlayout.widget.ConstraintLayout>